--- a/index.html
+++ b/index.html
@@ -12,13 +12,9 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <h1>Hello Top of Root</h1>
-
     <div id="root">
-      <h1>Shubham is here!</h1>
+      <h1>Not rendered!</h1>
     </div>
-
-    <h1>Hello Below of Root</h1>
 
     <!-- Injecting React and ReactDOM CDN Link -->
 
