--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       <h1>Not rendered!</h1>
     </div>
 
-    <!-- Injecting React and ReactDOM CDN Link -->
-
     <!-- Linking External JavaScript File -->
-    <script type="module" src="./App.js"></script>
+    <script
+      type="module"
+      src="./src/App.js"
+    ></script>
   </body>
 </html>
