--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <div id="root">
-      <h1>Not rendered!</h1>
-    </div>
+    <div id="root"></div>
 
     <!-- Linking External JavaScript File -->
     <script
